[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tonic = { version = "0.8.2", features = ["tls", "tls-roots", "gzip" ] }
futures = { version="0.3", default-features = false, features = ["alloc"]}
tokio-stream = { version = "0.1", features =["net"]}
prost = "0.11.2"
rand = "0.8.5"

[[example]]
name = "client"
path = "src/grpc/client.rs"

[[example]]
name = "server"
path = "src/grpc/server.rs"

[[example]]
name = "client_streaming"
path = "src/grpc/client_streaming.rs"
